--- 1.6.3 2011/09/22

Make termlist sorting stable. Terms with same frequency are now sorted by
their display name. This makes a pretty display and improves our
regression test because qsort is not a stable sort.

New sort parameter value 'position'. The 'position' sorts merged records
by their original position from the remote target. This is primarily useful
for debugging and may be used for targets that already perform some kind
of relevance ranking. Note that sort by default is decreasing; so to get
records in their original order sort=position:1 must be used.

--- 1.6.2 2011/09/15

tmarc.xsl: yet another 773$g fix. Was broken in 1.6.1 as well.

Facility to change working directory for pazpar2 daemon. Option -wdir
sets working directory to dir. This facility is useful if core dumps
must be saved. In this case, the current working directory must be
writable by the running user, such as "nobody".

--- 1.6.1 2011/09/14

New configuration element <icu_chain> for <server>/<service> which
allows a named ICU rule (chain) to be defined. The names relevance,
sort, mergekey and facet are used for those operations. The definition
  <icu_chain id="sort" locale="en"> ..  </icu_chain>
is identical to
  <sort> <icu_chain locale="en> ... </icu_chain> </sort>
And so on.. for relevance, mergekey and facet as well. The latter
style is deprecated. The facet terms are normalized by the facet
rule by default. This may be changed on a metadata field basis by
defining the new attribute 'facetrule' for the metadata element.
For example:
  <icu_chain id="myrule" locale="en"> ... </icu_chain>
  <metadata name="author" termlist="yes" facetrule="myrule"/>

Preserve rorder for merged metadata. Fixes issue as reported by Sven
Porst: http://lists.indexdata.dk/pipermail/yazlist/2011-July/003230.html

tmarc.xsl: set journal-subpart to 773$ only.

--- 1.6.0 2011/09/12

Modify the behavior for the limit parameter (first defined in 1.5.7).