@@ -1,3 +1,7 @@
+
+command=termlist without name parameter returns all termlists/facets.
+Previously if name parameter was omitted, only "subject" was returned.
+
 --- 1.6.3 2011/09/22
 
 Make termlist sorting stable. Terms with same frequency are now sorted by
